# json-parser

./: .gitignore  CMakeLists.txt  README.md  build.bat  json_parser.h  test.bat
cmake/: json_parserConfig.cmake.in
include/json_loader/: json_loader.h
include/json_parser/: json_parser.h
src/: json_parser.cpp
src/json_loader/: json_loader.cpp
src/json_parser/: json_parser.cpp
tests/data/: malformed.json  nested_object.json  numbers.json
tests/unit/: test_file_loading.cpp  test_key_value_parsing.cpp  test_parse_array.cpp  test_parse_booleans_and_null.cpp  test_parse_objects.cpp  test_parse_primitives.cpp  test_parse_strings.cpp
